fix scrollbar issue

--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -1,5 +1,5 @@
-body {
-  overflow: hidden;
+html, body {
+  overflow: scroll;
   margin: 10;
   font-size: 14px;
   font-family: "Helvetica Neue", Helvetica;
